--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "ip": "^1.1.8",
+    "javascript-obfuscator": "^4.0.0",
     "multicast-dns": "^7.2.5",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3"
